clean up code and checkstyle warnings