@@ -1,6 +1,5 @@
 package com.taxonic.carml.model.impl;
 
-import com.google.common.collect.ImmutableSet;
 import com.taxonic.carml.model.NameableStream;
 import com.taxonic.carml.model.Resource;
 import com.taxonic.carml.rdf_mapper.annotations.RdfProperty;
@@ -51,7 +50,7 @@ public class CarmlStream extends CarmlResource implements NameableStream {
 
   @Override
   public Set<Resource> getReferencedResources() {
-    return ImmutableSet.of();
+    return Set.of();
   }
 
   @Override
